import "ydb/core/protos/counters.proto";

package NKikimr.NStat;

option java_package = "ru.yandex.kikimr.proto";

option (TabletTypeName) = "StatisticsAggregator";

enum ETxTypes {
    TXTYPE_INIT_SCHEMA = 0         [(TxTypeOpts) = {Name: "TxInitSchema"}];
    TXTYPE_INIT = 1                [(TxTypeOpts) = {Name: "TxInit"}];
    TXTYPE_CONFIGURE = 2           [(TxTypeOpts) = {Name: "TxConfigure"}];
    TXTYPE_SCHEMESHARD_STATS = 3   [(TxTypeOpts) = {Name: "TxSchemeShardStats"}];
    TXTYPE_ANALYZE_TABLE = 4       [(TxTypeOpts) = {Name: "TxAnalyzeTable"}];
    TXTYPE_NAVIGATE = 5            [(TxTypeOpts) = {Name: "TxNavigate"}];
    TXTYPE_RESOLVE = 6             [(TxTypeOpts) = {Name: "TxResolve"}];
    TXTYPE_SCAN_RESPONSE = 7       [(TxTypeOpts) = {Name: "TxScanResponse"}];
    TXTYPE_SAVE_QUERY_RESPONSE = 8 [(TxTypeOpts) = {Name: "TxSaveQueryResponse"}];
    TXTYPE_SCHEDULE_TRAVERSAL = 9  [(TxTypeOpts) = {Name: "TxScheduleTraversal"}];
    TXTYPE_DELETE_QUERY_RESPONSE = 10 [(TxTypeOpts) = {Name: "TxDeleteQueryResponse"}];
    TXTYPE_AGGR_STAT_RESPONSE = 11 [(TxTypeOpts) = {Name: "TxAggregateStatisticsResponse"}];
    TXTYPE_RESPONSE_TABLET_DISTRIBUTION = 12 [(TxTypeOpts) = {Name: "TxResponseTabletDistribution"}];
    TXTYPE_ACK_TIMEOUT = 13        [(TxTypeOpts) = {Name: "TxAckTimeout"}];
}
